--- a/patatap.html
+++ b/patatap.html
@@ -5,7 +5,7 @@
 	<title>Patatap Clone</title>
 	<link rel="stylesheet" type="text/css" href="patatap.css">
 	<script type="text/javascript" src="paper-full.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.28/howler.js"></script>
+	<script type="text/javascript" src="howler.js"></script>
 	<script type="text/paperscript" canvas="myCanvas">
 	var data = {
 	q: {
